# govdatahub

./: .gitignore  DATA_LICENSE  LICENSE  Makefile  README.md  TERMS.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4c85a71cc441_initial_migration.py
src/gdhub/: config.py  db.py  main.py  models.py
src/gdhub/routers/: health.py  inmates.py
tests/: test_health.py
